--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,10 @@
 site_name: 开发板文档
 #theme: rtd-dropdown
 theme: readthedocs
+
+nav；
+- Home: index.md
+- Linux:
+    - docs/Linux系统定制
+- Amlogic:
+    - docs/Amlogic
