--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -1,4 +1,6 @@
 # Defining the exact version will make sure things don't break
-sphinx==4.2.0
+sphinx==5.0.2
 sphinx_rtd_theme==1.0.0
 readthedocs-sphinx-search==0.1.1
+mkdocs==1.3.0
+mkdocs-rtd-dropdown==1.0.2
